fixed avatar stretch issue

--- a/client/src/components/profile/css/profile.scss
+++ b/client/src/components/profile/css/profile.scss
@@ -20,7 +20,7 @@
 
 			.profile__avatar {
 				width: 200px;
-				height: auto;
+				height: 200px;
 				margin: 20px;
 			}
 			.profile__name {
